test design first page

--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -1,9 +1,25 @@
 <ion-view view-title="Ouizz">
   <ion-content class="padding">
     <p align="center"><img src="img/logo.png"/ width=100px align="center"></p>
-    <h2>Test de l'app</h2>
-    <p>
-    Voyons voir ce que ça donne...
-    </p>
+    <div class="card">
+  <div class="item item-divider">
+   Tes événements à venir
+  </div>
+  <div class="item item-text-wrap">
+    Concert du BDA
+  </div>
+   <div class="item item-text-wrap">
+    Conférence sur l'art contemporain
+  </div>
+  <div class="item item-divider">
+    Autres événements suggérés
+  </div>
+  <div class="item item-text-wrap">
+    Apéro Ski Club
+  </div>
+    <div class="item item-text-wrap">
+    Tournoi de rugby
+  </div>
+</div>
   </ion-content>
 </ion-view>
