faire apparaître les events

--- a/Ouizz/www/templates/evenement-detail.html
+++ b/Ouizz/www/templates/evenement-detail.html
@@ -20,7 +20,7 @@
         </p>
       </div>
       <button class="button button-block button-positive">
-        Réserver pour {{evenement.price}}€
+        S'inscrire pour {{evenement.price}}€
       </button>
     </div>
   </ion-content>
