--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -1,4 +1,7 @@
 <ion-view view-title="Ouizz">
+<ion-nav-bar class="bar-energized">
+    <ion-nav-back-button></ion-nav-back-button>
+  </ion-nav-bar>
   <ion-content class="padding">
     <p align="center"><img src="img/logo.png"/ width=100px align="center"></p>
     <div class="card">
