--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -1,8 +1,17 @@
-.card div {
-	color:orange;
+.card h3 {
+	color:grey;
 	font-weight:bold;
+	font-size:16px;
 }
 .item h2 {
+	color:grey;
+	font-weight:bold;
+	text-decoration:underline;
+	font-family:helvetica;
+}
+.item p {
+	color:grey;
+	font-style:italic;
 	font-weight:bold;
 }
 .padding img {
