--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -5,8 +5,8 @@
   <ion-content class="padding">
     <p align="center"><img src="img/logo.png"/ width=100px align="center"></p>
     <div class="card">
-  <div class="item item-divider">
-   Tes événements à venir
+  <div class="item item-energized item-divider">
+     <h3> Tes événements à venir </h3>
   </div>
   <div class="item item-text-wrap">
     <ion-list>
@@ -19,8 +19,8 @@
       </ion-item>
     </ion-list>
   </div>
-  <div class="item item-divider">
-    Autres événements suggérés
+  <div class="item item-energized item-divider">
+    <h3> Autres événements suggérés </h3>
   </div>
 </div>
   </ion-content>
