--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -2,18 +2,26 @@
 	color:grey;
 	font-weight:bold;
 	font-size:16px;
+	height:20px;
 }
 .item h2 {
 	color:grey;
 	font-weight:bold;
 	text-decoration:underline;
 	font-family:helvetica;
+	font-size:15px;
 }
 .item p {
 	color:grey;
 	font-style:italic;
-	font-weight:bold;
+	font-weight:normal;
+	font-size:12px;
 }
 .padding img {
 	width:80px;
+}
+
+.item-icon-right {
+	height:95px;
+	line-height:15px;
 }
