rajout message appli

--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -26,3 +26,10 @@
 	line-height:15px;
 	border: 1px orange dotted;
 }
+
+.padding p {
+	font-style:italic;
+	color:grey;
+	line-height:12px;
+	font-size:12px;
+}
