--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -4,6 +4,8 @@
   </ion-nav-bar>
   <ion-content class="padding">
     <p align="center"><img src="img/logo.png"/ width=100px align="center"></p>
+    <p align="center"> Laisse toi <b>Ouizzer</b> par ton application préférée </p>
+    <p align="center"> Et ne rate plus aucun événement sur <b>ton campus adoré</b> ! </p>
     <div class="card">
   <div class="item item-energized item-divider">
      <h3> Tes événements à venir </h3>
