test version fond orange

--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -1,14 +1,16 @@
 <ion-view view-title="Ouizz" style='background-color:#FFEBCD'>
-<ion-nav-bar class="bar-energized">
+<ion-nav-bar class="bar-dark">
     <ion-nav-back-button></ion-nav-back-button>
   </ion-nav-bar>
   <ion-content class="padding">
     <p align="center"><img src="img/logo.png"/ width=100px align="center"></p>
+    <p align="center"> Laisse toi <b>Ouizzer</b> par ton application préférée </p>
+    <p align="center"> Et ne rate plus aucun événement sur ton campus adoré </p>
     <div class="card">
-  <div class="item item-energized item-divider">
+  <div class="item item-dark item-divider">
      <h3> Tes événements à venir </h3>
   </div>
-  <div class="item item-energized item-divider">
+  <div class="item item-dark item-divider">
     <h3> Autres événements suggérés </h3>
   </div>
   <div class="item item-text-wrap">
