--- a/Ouizz/www/templates/evenement-detail.html
+++ b/Ouizz/www/templates/evenement-detail.html
@@ -11,7 +11,7 @@
         <h2>{{evenement.name}}</h2>
         <p>{{evenement.date}}</p>
         <p>{{evenement.hour}}</p>
-        <p>{{evenement.place}}
+        <p>{{evenement.place}}</p>
       </div>
 
       <div class="item item-body">
