--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -3,7 +3,7 @@
     <ion-nav-back-button></ion-nav-back-button>
   </ion-nav-bar>
   <ion-content class="padding">
-    <p align="center"><img src="img/logo.png"/ width=100px align="center"></p>
+    <p align="center"><img src="img/logo_blanc.png"/ width=100px align="center"></p>
     <p align="center"> Laisse toi <b>Ouizzer</b> par ton application préférée </p>
     <p align="center"> Et ne rate plus aucun événement sur ton campus adoré </p>
     <div class="card">
