Réparation des vues de détail

--- a/Ouizz/www/templates/tabs.html
+++ b/Ouizz/www/templates/tabs.html
@@ -10,9 +10,11 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-    <!-- Evenement Detail Tab -->
+    <!-- Evenement Detail Tab
   <ion-tab title="Evenement" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/evenements">
     <ion-nav-view name="tab-evenements"></ion-nav-view>
   </ion-tab>
+
+  -->
 
 </ion-tabs>
