--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -4,6 +4,11 @@
 	font-size:16px;
 	height:20px;
 }
+
+.bar.bar-dark .title {
+    font-size: 25px;
+}
+
 .item h2 {
 	color:#696969;
 	font-weight:bold;
