--- a/Ouizz/www/templates/evenement-detail.html
+++ b/Ouizz/www/templates/evenement-detail.html
@@ -4,7 +4,7 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{evenement.name}}">
+<ion-view view-title="{{evenement.name}}" class="background">
   <ion-content class="padding">
     <div class="list card">
       <div class="item">
