--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Ouizz" style='background-color:#FFEBCD'>
+<ion-view view-title="Ouizz" class="background" >
 <ion-nav-bar class="bar-dark">
     <ion-nav-back-button></ion-nav-back-button>
   </ion-nav-bar>
