--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -5,6 +5,21 @@
 	height:20px;
 }
 
+.full-image {
+	width: 100%;
+}
+
+.item-avatar > img:first-child, .item-avatar .item-image, .item-avatar .item-content > img:first-child, .item-avatar .item-content .item-image, .item-avatar-left > img:first-child, .item-avatar-left .item-image, .item-avatar-left .item-content > img:first-child, .item-avatar-left .item-content .item-image {
+    position: absolute;
+    top: 16px;
+    left: 0px;
+    max-width: 60px;
+    max-height: 60px;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
 .background {
 	background-color: #FFEBCD;
 }
@@ -30,9 +45,7 @@
 	font-weight:normal;
 	font-size:12px;
 }
-.padding img {
-	width:80px;
-}
+
 
 .item-icon-right {
 	height:95px;
