Modifications visuelles du CSS. Il faut encore modifier les bulles de la page principale car les images sont étirées

--- a/Ouizz/www/templates/evenement-detail.html
+++ b/Ouizz/www/templates/evenement-detail.html
@@ -5,11 +5,11 @@
   The Friends service returns an array of friend data
 -->
 <ion-view view-title="{{evenement.name}}" class="background">
-  <ion-content class="padding">
+  <ion-content>
     <div class="list card">
       <div class="item">
         <img class="full-image" ng-src="{{evenement.image}}">
-        <h2>{{evenement.name}}</h2>
+        <h2 style="font-size:40px" class="center padding">{{evenement.name}}</h2>
         <p>{{evenement.date}}</p>
         <p>{{evenement.hour}}</p>
         <p>{{evenement.place}}</p>
