--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -15,8 +15,8 @@
     left: 0px;
     max-width: 60px;
     max-height: 60px;
-    width: 100%;
-    height: 100%;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
 }
 
@@ -28,10 +28,14 @@
     font-size: 25px;
 }
 
+.center {
+	text-align: center;
+}
+
 .item h2 {
 	color:#696969;
 	font-weight:bold;
-	text-decoration:underline;
+	/*text-decoration:underline;*/	
 	font-family:helvetica;
 	font-size:15px;
 }
