--- a/Ouizz/www/templates/evenement-detail.html
+++ b/Ouizz/www/templates/evenement-detail.html
@@ -20,7 +20,7 @@
           {{evenement.description}}
         </p>
       </div>
-      <button class="button button-block button-positive">
+      <button class="button button-block button-dark">
         S'inscrire pour {{evenement.price}}€
       </button>
     </div>
