--- a/Ouizz/www/templates/tabs.html
+++ b/Ouizz/www/templates/tabs.html
@@ -11,8 +11,8 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
     <!-- Evenement Detail Tab -->
-  <ion-tab title="Evenement" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/evenements">
-    <ion-nav-view name="tab-evenements"></ion-nav-view>
+  <ion-tab title="Event" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/events">
+    <ion-nav-view name="tab-events"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
