--- a/Ouizz/www/templates/tabs.html
+++ b/Ouizz/www/templates/tabs.html
@@ -12,7 +12,7 @@ navigation history that also transitions its views in and out.
 
     <!-- Evenement Detail Tab -->
   <ion-tab title="Event" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/events">
-    <ion-nav-view name="tab-events"></ion-nav-view>
+    <ion-nav-view name="tab-Events></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
