--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -10,8 +10,8 @@
       <div class="item">
         <h2>{{event.name}}</h2>
         <p>{{event.date}}</p>
-        <p>{{event.hour}}</p>
-        <p>{{event.place}}
+        <p>{{event.time}}</p>
+        <p>{{event.location}}
       </div>
 
       <div class="item item-body">
