--- a/Ouizz/www/templates/tabs.html
+++ b/Ouizz/www/templates/tabs.html
@@ -10,9 +10,9 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-    <!-- Evenement Detail Tab -->
-  <ion-tab title="Event" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/events">
+    <!-- Evenement Detail Tab   <ion-tab title="Event" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/events">
     <ion-nav-view name="tab-Events></ion-nav-view>
   </ion-tab>
+-->
 
 </ion-tabs>
