--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -39,3 +39,25 @@
 	color:#FF8C00;
 	font-size:20px;
 }
+.background {
+	background-color:#FFEBCD;
+}
+
+.full-image {
+	width:100%;
+}
+
+.item-avatar > img:first-child, .item-avatar .item-image, .item-avatar .item-content > img:first-child, .item-avatar .item-content .item-image, .item-avatar-left > img:first-child, .item-avatar-left .item-image, .item-avatar-left .item-content > img:first-child, .item-avatar-left .item-content .item-image {
+ 	 position: absolute;
+     top: 16px;
+     left: 0px;
+     max-width: 60px;
+     max-height: 60px;
+     width: 100%;
+     height: 100%;
+     border-radius: 50%;
+ }
+
+.padding img {
+	widht:80px;
+}
