--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -4,10 +4,11 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{event.name}}">
+<ion-view view-title="{{event.name}}" class="background">
   <ion-content class="padding">
     <div class="list card">
       <div class="item">
+        <img class="full-image" ng-src="{{event.image}}">
         <h2>{{event.name}}</h2>
         <p>{{event.date}}</p>
         <p>{{event.time}}</p>
@@ -15,7 +16,6 @@
       </div>
 
       <div class="item item-body">
-        <img class="full-image" ng-src="{{event.image}}">
         <p>
           {{event.description}}
         </p>
