--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Ouizz" style='background-color:#FFEBCD'>
+<ion-view view-title="Ouizz" class="background">
 <ion-nav-bar class="bar-dark">
     <ion-nav-back-button></ion-nav-back-button>
   </ion-nav-bar>
@@ -16,10 +16,10 @@
   <div class="item item-text-wrap">
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in events" type="item-text-wrap" href="#/tab/events/{{event.id}}">
-        <img ng-src="{{event.image}}">
+        <img ng-src="{{event.image}}" class="small-image">
         <h2>{{event.name}}</h2>
         <p>{{event.date}}</p>
-        <p>{{event.hour}}</p>
+        <p>{{event.time}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
