--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -20,7 +20,7 @@
           {{event.description}}
         </p>
       </div>
-      <button class="button button-block button-positive">
+      <button class="button button-block button-energized" ng-click="openModal()">
         S'inscrire pour {{event.price}}€
       </button>
     </div>
