--- a/Ouizz/www/templates/modal-register.html
+++ b/Ouizz/www/templates/modal-register.html
@@ -12,7 +12,7 @@
     	<span class="input-label">Votre mot de passe</span>
     	<input type="text" ng-model="ouizzuser_password">
   	</label>
-  	<button class="button button-block button-positive" ng-disabled="!ouizzuser_username">
+  	<button class="button button-block button-positive" ng-click="register(ouizzuser_username, ouizzuser_password)" ng-disabled="!ouizzuser_username">
   S'inscrire au nom de {{ouizzuser_username || ''}} 
 </button>
     </ion-content>
