--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -6,6 +6,8 @@
 -->
 
 <ion-view view-title="{{event.name}}" class="background">
+<ion-nav-bar class="bar-dark">
+    <ion-nav-back-button></ion-nav-back-button>
   <ion-content class="padding">
     <div class="list card">
       <div class="item">
