--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -11,6 +11,13 @@
 	font-family:helvetica;
 	font-size:20px;
 }
+.item h4 {
+	color:#696969;
+	font-weight:bold;
+	text-decoration:underline;
+	font-family:helvetica;
+	font-size:15px;
+}
 .item h2 span {
 	border-bottom: solid 1px #FFA07A;
 }
@@ -35,10 +42,6 @@
 	color:#696969;
 	line-height:20px;
 }
-.padding b {
-	color:#FF8C00;
-	font-size:20px;
-}
 .background {
 	background-color:#FFEBCD;
 }
@@ -60,4 +63,18 @@
 
 .padding img {
 	widht:80px;
+}
+.button1  {
+	background-color:#FF8C00;
+	border:none;
+	color:white;
+	font-size:18px;
+	height:48px;
+}
+
+.button2 {
+	background-color:#FF8C00;
+	border:none;
+	color:white;
+	font:bold;
 }
