--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -23,8 +23,9 @@
           {{event.description}}
         </p>
       </div>
-      <button class="button button-block button-energized" ng-click="openModal()">
-        S'inscrire pour {{event.price}}€
+      <button class="button1 button-block" ng-click="openModal()">
+      <i class="icon ion-compose"></i>
+       <b> S'inscrire pour {{event.price}}€ </b>
       </button>
     </div>
   </ion-content>
