--- a/Ouizz/www/templates/modal-register.html
+++ b/Ouizz/www/templates/modal-register.html
@@ -1,18 +1,19 @@
 <ion-modal-view>
     <ion-header-bar class="bar-dark">
       <h1 class="title">{{event.name}}</h1>
-      <button class="button button-secondary button-energized" ng-click="modal.hide()"><b>Cancel</b></button>
+      <button class="button2" ng-click="modal.hide()"><b>Cancel</b></button>
     </ion-header-bar>
     <ion-content class="background">
       <label class="item item-input">
-  		<span class="input-label"><b>Votre nom</b></span>
+  		<span class="input-label"><i class="icon ion-person"></i><b>Votre nom</b></span>
   		<input type="text" ng-model="ouizzuser_username">
 	</label>
 	 <label class="item item-input">
-    	<span class="input-label"><b>Votre mot de passe</b></span>
+    	<span class="input-label"><i class="icon ion-android-lock"></i><b>Votre mot de passe</b></span>
     	<input type="text" ng-model="ouizzuser_password">
   	</label>
-  	<button class="button button-block button-energized" ng-click="register(ouizzuser_username, ouizzuser_password)" ng-disabled="!ouizzuser_username">
+  	<button class="button1 button-block" ng-click="register(ouizzuser_username, ouizzuser_password)" ng-disabled="!ouizzuser_username">
+  	<i class="icon ion-compose"></i>
   S'inscrire au nom de <b>{{ouizzuser_username}}</b> 
 </button>
     </ion-content>
