--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -68,9 +68,21 @@
 }
 
 .popup-head {
-    background-color: #111;
+    background-color: #444;
 }
 
 .popup-title {
 	color: white;
+	font-size: 20px;
+
+}
+
+.popup-buttons .button.activated
+{
+  background-color: #FF8C00;
+}
+
+.popup-body {
+	font-size: 18px;
+	font-style: italic;
 }
