--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -11,8 +11,8 @@
   <ion-content class="padding">
     <div class="list card">
       <div class="item">
+      <h2 align="center"> {{event.name}}</h2>
         <img class="full-image" ng-src="{{event.image}}">
-        <h2>{{event.name}}</h2>
         <p>{{event.date}}</p>
         <p>{{event.time}}</p>
         <p>{{event.location}}
