--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -15,7 +15,7 @@
     <ion-list>
 
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in events" type="item-text-wrap" href="#/tab/events/{{event.id}}">
-        <img ng-src="{{event.image}}" class="small-image">
+        <img ng-src="{{event.image}}">
         <h4>{{event.name}}</h4>
         <p>{{event.date}}</p>
         <p>{{event.time}}</p>
