--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -15,13 +15,13 @@
         <img class="full-image" ng-src="{{event.image}}">
         <p>{{event.date}}</p>
         <p>{{event.time}}</p>
-        <p>{{event.location}}
+        <p>{{event.location}}</p>
       </div>
 
       <div class="item item-body">
-        <p>
+        <h6>
           {{event.description}}
-        </p>
+        </h6>
       </div>
       <button class="button1 button-block" ng-click="openModal()">
       <i class="icon ion-compose"></i>
