--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -6,10 +6,10 @@
     <p align="center"><img src="img/logo_blanc.png" width=100px align="center"></p>
     <div class="card">
   <div class="item item-dark item-divider">
-     <h3> Tes événements à venir </h3>
+     <h3> <i class="icon ion-android-star"></i> <b> Tes événements à venir </b></h3>
   </div>
   <div class="item item-dark item-divider">
-    <h3> Autres événements suggérés </h3>
+    <h3> <i class="icon ion-ios-calendar-outline"></i> <b> Autres événements suggérés </b></h3>
   </div>
   <div class="item item-text-wrap">
     <ion-list>
