--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -7,7 +7,12 @@
 
 <ion-view view-title="{{event.name}}" class="background">
 <ion-nav-bar class="bar-dark">
-    <ion-nav-back-button></ion-nav-back-button>
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+    <!--Logo-->
+    <ion-nav-buttons side="right">
+    <img src="img/logo_blanc.png" width=33px align="center">
+    </ion-nav-buttons>
   <ion-content class="padding">
     <div class="list card">
       <div class="item">
