--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -4,6 +4,12 @@
   </ion-nav-bar>
   <ion-content class="padding">
     <p align="center"><img src="img/logo_blanc.png" width=100px align="center"></p>
+
+    <button class="button1 button-block" ng-click="openModal()">
+      <i class="icon ion-compose"></i>
+       <b>Se connecter</b>
+      </button>
+
     <div class="card">
   <div class="item item-dark item-divider">
      <h3> <i class="icon ion-android-star"></i> <b> Tes événements à venir </b></h3>
