--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -5,6 +5,10 @@
   <ion-content class="padding">
     <p align="center"><img src="img/logo_blanc.png" width=100px align="center"></p>
     <div class="card">
+<button class="button1 button-block" ng-click="openModal()">
+      <i class="icon ion-compose"></i>
+       <b> S'inscrire pour {{event.price}}€ </b>
+      </button>
   <div class="item item-dark item-divider">
      <h3> <i class="icon ion-android-star"></i> <b> Tes événements à venir </b></h3>
   </div>
@@ -26,3 +30,9 @@
 </div>
   </ion-content>
 </ion-view>
+
+
+ <button class="button1 button-block" ng-click="openModal()">
+      <i class="icon ion-compose"></i>
+       <b> S'inscrire pour {{event.price}}€ </b>
+      </button>
