compte ok, registration auto, mais pas encore onglet events a venir

--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -27,7 +27,7 @@
           {{event.description}}
         </h6>
       </div>
-            <button class="button1 button-block" ng-click="openModal()">
+            <button class="button1 button-block" ng-click="register()">
       <i class="icon ion-compose"></i>
        <b> S'inscrire pour {{event.price}}€ </b>
       </button>
