--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -14,6 +14,18 @@
   <div class="item item-dark item-divider">
      <h3> <i class="icon ion-android-star"></i> <b> Tes événements à venir </b></h3>
   </div>
+<ion-list>
+
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in myevents" type="item-text-wrap" href="#/tab/events/{{event.id}}">
+        <img ng-src="{{event.image}}">
+        <h4>{{event.name}}</h4>
+        <p>{{event.date}}</p>
+        <p>{{event.time}}</p>
+        <i class="icon ion-chevron-right icon-accessory"></i>
+      </ion-item>
+    </ion-list>
+
+
   <div class="item item-dark item-divider">
     <h3> <i class="icon ion-ios-calendar-outline"></i> <b> Autres événements suggérés </b></h3>
   </div>
