--- a/Ouizz/www/templates/modal-register.html
+++ b/Ouizz/www/templates/modal-register.html
@@ -15,5 +15,9 @@
   	<i class="icon ion-compose"></i>
   Se connecter
 </button>
+<div class="wrap">
+		<a href="javascript:cal_single.download('Awesome Day')">Single Event</a>
+		<br>
+
     </ion-content>
   </ion-modal-view>
