--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -1,5 +1,9 @@
 <ion-view view-title="Ouizz" class="background">
+	<script type="text/javascript" src="../js/ics.deps.min.js"></script>
+	<script type="text/javascript" src="../js/demo/demo.js"></script>
 <ion-nav-bar class="bar-dark">
+	<script type="text/javascript" src="../js/ics.deps.min.js"></script>
+	<script type="text/javascript" src="../js/demo/demo.js"></script>
     <ion-nav-back-button></ion-nav-back-button>
   </ion-nav-bar>
   <ion-content class="padding">
@@ -47,7 +51,5 @@
 </ion-view>
 
 
- <button class="button1 button-block" ng-click="openModal()">
-      <i class="icon ion-compose"></i>
-       <b> S'inscrire pour {{event.price}}€ </b>
-      </button>
+
+
