--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -21,7 +21,7 @@
   </div>
 <ion-list>
 
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in myevents" type="item-text-wrap" href="#/tab/events/{{event.id}}">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in myevents" type="item-text-wrap" href="#/tab/events2/{{event.id}}">
         <img ng-src="{{event.image}}">
         <h4>{{event.name}}</h4>
         <p>{{event.date}}</p>
