--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -6,8 +6,8 @@
 -->
 
 <ion-view view-title="{{event.name}}" class="background">
-	<script type="text/javascript" src="../js/ics.deps.min.js"></script>
-	<script type="text/javascript" src="../js/demo/demo.js"></script>
+    <script src="../js/ics.deps.min.js"></script>
+    <script src="../js/demo.js"></script>
 <ion-nav-bar class="bar-dark">
 
     <ion-nav-back-button>
@@ -30,14 +30,20 @@
           {{event.description}}
         </h6>
       </div>
+
+
             <button class="button1 button-block" ng-click="register()">
       <i class="icon ion-compose"></i>
        <b> S'inscrire pour {{event.price}}€ </b>
       </button>
+
     </div>
 
 
-	<a class="button1 button-block" href="javascript:cal_single.download('Awesome Day')">Ajouter au calendrier</a>
-
   </ion-content>
 </ion-view>
+
+      <button class="button1 button-block" ng-click="addCalendar()">
+      <i class="icon ion-compose"></i>
+       <b> Ajouter au calendrier </b>
+      </button>
