--- a/Ouizz/www/templates/event-detail.html
+++ b/Ouizz/www/templates/event-detail.html
@@ -40,8 +40,8 @@
     </div>
 
 
-      <button class="button1 button-block" ng-click="addCalendar()">
-      <i class="icon ion-compose"></i>
+      <button class="button button-block button-dark" ng-click="addCalendar()">
+      <i class="icon ion-plus"></i>
        <b> Ajouter au calendrier </b>
       </button>
   </ion-content>
