--- a/Ouizz/www/css/style.css
+++ b/Ouizz/www/css/style.css
@@ -123,6 +123,12 @@
   background-color: #CC7000;
 }
 
+.button i {
+	padding-left:5px;
+	size:4px;
+	color:#CC7000;
+}
+
 .button1 i {
 	font-size:20px;
 	color:white;
