--- a/Ouizz/www/templates/modal-register.html
+++ b/Ouizz/www/templates/modal-register.html
@@ -9,7 +9,7 @@
 	</label>
 	 <label class="item item-input">
     	<span class="input-label"><i class="icon ion-android-lock"></i><b>Votre mot de passe</b></span>
-    	<input type="text" ng-model="ouizzuser_password">
+    	<input type="password" ng-model="ouizzuser_password">
   	</label>
   	<button class="button1 button-block" ng-click="connexion(ouizzuser_username, ouizzuser_password)" ng-disabled="!ouizzuser_username">
   	<i class="icon ion-compose"></i>
