--- a/Ouizz/www/templates/event-detail2.html
+++ b/Ouizz/www/templates/event-detail2.html
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-            <button class="button button-block button-dark">
+            <button class="button button-block button-dark" ng-click="unsubscribe()">
       <i class="icon ion-close"></i>
        <b> Annuler l'inscription </b>
       </button>
