--- a/Ouizz/www/templates/tab-dash.html
+++ b/Ouizz/www/templates/tab-dash.html
@@ -24,8 +24,8 @@
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in myevents" type="item-text-wrap" href="#/tab/events2/{{event.id}}">
         <img ng-src="{{event.image}}">
         <h4>{{event.name}}</h4>
-        <p>{{event.date}}</p>
-        <p>{{event.time}}</p>
+        <p>{{event.date | date:"longDate" }}</p>
+        <p>{{event.time | date:"shortTime"}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
@@ -40,8 +40,8 @@
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in events" type="item-text-wrap" href="#/tab/events/{{event.id}}">
         <img ng-src="{{event.image}}">
         <h4>{{event.name}}</h4>
-        <p>{{event.date}}</p>
-        <p>{{event.time}}</p>
+        <p>{{event.date | date:"longDate" }}</p>
+        <p>{{event.time | date:"shortTime"}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
